[package]
name = "gateway-ampq-health-check"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenvy = "0.15"
serde = "1.0"
serde_derive = "1.0"
serde_json = { version = "1.0" }
chrono = "0.4"
reqwest = { version = "0.12", features = ["blocking", "json"] }